--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     //  jasypt
     compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot', version: '2.1.1'
 
+    //  redis
 }
