--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     //  jasypt
     compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot', version: '2.1.1'
 
-    //  redis
+    //  jwt
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 }
